create_ingress_microbot.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: microbot-ingress
    annotations:
      cert-manager.io/cluster-issuer: lets-encrypt
  spec:
    tls:
      - hosts:
          - templ.tw1.su
        secretName: microbot-ingress-tls
    rules:
      - host: templ.tw1.su
        http:
          paths:
            - backend:
                service:
                  name: microbot
                  port:
                    number: 80
              path: /
              pathType: Exact
